--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@next/env": "^12.2.5",
     "dotenv": "^8.2.0",
     "framer-motion": "^2.7.5",
     "globby": "^11.0.0",
@@ -29,8 +30,7 @@
     "react-scroll": "^1.8.0",
     "react-stickynode": "^3.0.3",
     "theme-ui": "^0.3.1",
-    "typeface-dm-sans": "^1.1.3",
-    "@next/env": "^12.0.7"
+    "typeface-dm-sans": "^1.1.3"
   },
   "devDependencies": {
     "imagemin-mozjpeg": "^9.0.0",
